GNOME Bugzilla – Bug 635368
Ignore empty elements in the search path
Last modified: 2010-12-10 16:13:07 UTC
We were treating empty elements in the search path as meaning the current directory. However, empty elements are easy to end up with by mistakes in path construction, and treating them as the current directory can result in extremely confusing results. If the current directory is actually meant, it can be specified as '.'.
Created attachment 174922 [details] [review] Ignore empty elements in the search path
Review of attachment 174922 [details] [review]: Looks good.
Attachment 174922 [details] pushed as 6c86e33 - Ignore empty elements in the search path